# ebobot

./: .gitignore  Ebobot.docx  README.md  REQUIREMENTS.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  chat.py  personas.py  session.py
backend/app/core/: deps.py  state_machine.py
backend/app/models/: chat.py  persona.py  session.py
backend/app/personas/: terminator.yaml
backend/app/services/: llm_service.py  prompt_builder.py  stt_service.py  tts_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatBubble.tsx  ChatInput.tsx  ChatMessageList.tsx  PersonaCard.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts  usePersonas.ts
frontend/src/pages/: ChatPage.tsx  PersonaSelectPage.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_chat_flow.py
